test/should-fail/badimport.f3
/**
 * Ensure that malformed import statements are caught nicely be the parser/lexer
 * @test/compile-error
 */

import javaf.*.g;
import javaf.*.*;
import javaf.;
import javaf..g.*;





